对话页底部输入框:大框加白底及上沿灰边.dialog-box高度为100%,并在底部加一个bottom-space空白条,颜色与大背景相同,以保证对话文字不会落在输入框之下.

--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
@@ -61,6 +61,12 @@ body{position:relative;
 #loading img{float:left}
 #loadingtext{float:left;margin-left:10px;padding-top: 5px;font-size:12px;}
 
+#dialog-bottom-space{
+	height:40px;
+	width:100%;
+	background-color:#f6f6f6;
+}
+
 #dialog_box .user-pic,.topic-box .right .user-pic {width:32px;height:32px;border-radius:16px;overflow:hidden}
 #dialog_box .user-pic{position:absolute;top:0;right:0;}
 #dialog_box .user-pic img,.topic-box .right .user-pic img{width:100%;height:100%}
