--- a/xunta-web/src/main/webapp/client_code/dialog_page/inputframe.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/inputframe.css
@@ -1,8 +1,10 @@
 #inputframe,#inputframe1 {
 position:fixed; bottom:0;
-height: 30px;
+height: 33px;
 width: 100%;
 padding-bottom:4px;
+border-top:1px solid #dfdfdf;
+background:#ffffff;
 }
 #inputbox{
 float:left;	
@@ -10,6 +12,7 @@ color:gray;
 border: 1px solid #dfdfdf;	border-radius: 3px;
 height:28px; width: 75%; 	
 margin:0px;
+margin-top:4px;
 margin-left:3px; 
 padding:0px;
 padding-left: 5px;	padding-right: 5px;
@@ -20,7 +23,8 @@ outline:none;
 #inputsubmit{float:right;	
 border:1px solid #c8c8c8;	border-radius:3px;	
 height: 28px;	width: 40px;	
-margin-right:3px;	
+margin-right:3px;
+margin-top:4px;	
 //outline:none;
 }
 
