--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -656,11 +656,17 @@ height:0px;
 
 
 .yesItem,.noItem{
-	position:absolute;
-	display:none;
-	padding:2px;
-	color:#e4e4e4;
-	font-size:14px;
+    position: absolute;
+    display: none;
+    padding: 2px;
+    color: #e4e4e4;
+    font-size: 14px;
+    border: 1px solid #959595;
+    border-radius: 50%;
+    height: 30%;
+    width: 30%;
+    line-height: 257%;
+    text-align: center;
 }
 
 .yesItem{
