--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -681,3 +681,18 @@ height:0px;
 	top:0px;
 	left:0px;
 }
+
+.deleteButton{
+	position:fixed;
+	z-index:104;
+	width:10%;
+	height:10%;
+	border:1px solid red;
+}
+.cancelButton{
+	position:fixed;
+	z-index:104;
+	width:10%;
+	height:10%;
+	border:1px solid red;
+}
