--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -672,14 +672,15 @@ height:0px;
 }
 
 .cover{
-	width: 387px; 
-	height: 620px; 
+	width: 100%; 
+	height: 100%; 
 	background: rgb(0, 0, 0); 
 	position: fixed; 
 	z-index: 103; 
 	opacity: 0.7;
 	top:0px;
 	left:0px;
+	z-index:103;
 }
 
 .buttons{
