自动mytag区为三行,字大小与各种间隔自动调节.

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
@@ -215,11 +215,13 @@
 }
 
 .myTagFail{
-	width:5px; 
+	//width:5px;
+	height:14px; 
 	//position:absolute; 
-	top:-1px; 
-	left:-10px; 
-	border-bottom:1px solid gray;
+	//top:-1px; 
+	//left:-10px; 
+	//border-bottom:1px solid gray;
+	
 }
 
 #htmlobj{
