优化:小绿点的位置可以准确地骑在头像的肩头上.

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
@@ -48,8 +48,9 @@
 #showonlineoffline>img{
 	height: 100%; 
 	//width:7%;
-	position:relative;
-	top:-80%
+	position:absolute;
+	top:0px;
+	left:0px;
 }
 
 #showouseroprate{
