--- a/xunta-web/src/main/webapp/client_code/css/popup.css
+++ b/xunta-web/src/main/webapp/client_code/css/popup.css
@@ -14,6 +14,7 @@
   -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
   -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
   transition: opacity 0.3s 0s, visibility 0s 0.3s;
+  z-index:102;
 }
 .cd-popup.is-visible {
   opacity: 1;
