--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
@@ -34,6 +34,11 @@ body{position:relative;
 }
 
 /**start:叶夷  2017.11.28 tab来回切换需要的css样式*/
+.wrap{
+	overflow:hidden;
+	width:100%;
+}
+
 ul,li{
 	list-style: none
 }
@@ -42,6 +47,7 @@ ul,li{
 	background: #f3f3f3; 
 	overflow: hidden;
 	width:100%;
+	margin-bottom:10px;
 }
    
 .tabClick li{ 
@@ -58,13 +64,10 @@ ul,li{
 	transition: 0.1s; 
 	font-weight: bold
 }
-   
-.tabCon{ 
-	overflow: hidden
-}
     
 .tabBox{ 
 	position: relative
+	overflow: hidden
 }
    
 .tabList{
