--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
@@ -3,9 +3,15 @@ body{position:relative;
 	background:url('../image/dialoglist-background1.jpg') 100% 100% no-repeat;
 	background-size:100% 100%;}
 
-#header {/* float:left; */
-	width:100%; height: 32px; background:url('../image/titbg.gif') center top repeat-x;background-size:8px;
-	border-bottom:1px solid #d0d0d0; z-index:12;}
+#header {
+    width: 100%;
+    height: 43px;
+    background-size: 8px;
+    //border-bottom: 1px solid #5d5d5d;
+    //margin-bottom: 20px;
+    z-index: 12;
+    background-color: rgb(250, 250, 250);
+}
 
 #goback{font-size:22px;float:left;}
 #goback img{height:18px; width:24px; margin-top:7px;margin-left:10px;margin-right:10px;}
@@ -47,7 +53,7 @@ ul,li{
 	background: #f3f3f3; 
 	overflow: hidden;
 	width:100%;
-	margin-bottom:10px;
+	margin-bottom:20px;
 }
    
 .tabClick li{ 
@@ -78,8 +84,8 @@ ul,li{
 	line-height:100%; 
 	text-align:center; 
 	color:#D3D3D3; 
-	font-size:36px; 
-	font-family: "Arial Black"
+	font-size:15px; 
+	//font-family: "Arial Black"
 }
 ul{
     -webkit-margin-before: 0em;
