--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
@@ -10,8 +10,8 @@ html, body {
 
 .showMatchUsers{
 	width:100%; 
-	height:90%;
-	overflow-y:scroll;
+	height:100%;
+	//overflow-y:scroll;
 	overflow-x:hidden;
 }
 
@@ -47,8 +47,8 @@ html, body {
 }
 
 .matchUser{
-	border-top: 1px solid #f1f1f1;
-	padding-top:10px;
+	//border-top: 1px solid #f1f1f1;
+	//padding-top:10px;
 	float:left;
 }
 
