将匹配人头像的一整块容器加上点击进入匹配人详情页的方法

--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -719,3 +719,14 @@ height:0px;
 .mytagclick{
 	border:1px solid red;
 }
+
+.matchUsers{
+	//width: 190px;
+    //height: 144px;
+    //border: 1px solid beige;
+    //margin-left: 183px;
+    /* background-color: aliceblue; */
+    position: absolute;
+    z-index: 100;
+    cursor:pointer;
+}
