--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
@@ -13,8 +13,11 @@ body{position:relative;
     background-color: rgb(250, 250, 250);
 }
 
-#goback{font-size:22px;float:left;}
-#goback img{height:18px; width:24px; margin-top:7px;margin-left:10px;margin-right:10px;}
+#goback{position:relative;height:43px;width:60px;font-size:22px;float:left;cursor:pointer;z-index:14}
+#goback img{height: 16px;
+    width: 20px;
+    margin-top: 12px;
+    margin-left: 21px;}
 
 ._closeBtn{
 	float:right;
@@ -26,7 +29,18 @@ body{position:relative;
 	padding-left: 10px;
 }
 
-#title{color:#800000;float:left;height:32px; line-height:32px;border-left:1px solid #d8d8d8; padding-left:10px; z-index:13;}
+#title{
+	position:absolute;
+	width:100%;
+	text-align:center;
+	color: #000000;
+	float: left;
+    height: 32px;
+    line-height: 40px;
+    //margin-left: 30%;
+    font-size: 18px;
+    //padding-left: 10px;
+    z-index: 13;}
 
 .sendMsg{
 	margin-right:10px;
