--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
@@ -51,6 +51,7 @@ body{position:relative;
 	float:right;
 	height:25px;
 	line-height:25px;
+	cursor:pointer;
 }
 
 /**start:叶夷  2017.11.28 tab来回切换需要的css样式*/
