--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
@@ -33,7 +33,7 @@ html, body {
     height: 30px;
     line-height: 30px;
     background-color: #FFA07A;
-    width: 50px;
+    //width: 50px;
     text-align: center;
     border-radius: 5px;
     margin-left: 5px;
@@ -50,6 +50,7 @@ html, body {
 	//border-top: 1px solid #f1f1f1;
 	//padding-top:10px;
 	float:left;
+	width:100%;
 }
 
 .userTags{
