--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
@@ -167,4 +167,19 @@ border-bottom:1px solid #d8d8d8;}*/
     line-height: 60px;
     font-size:16px;
 }
+.pop-title{
+    float: left;
+    width: 100%;
+    height: 36px;
+    line-height: 36px;
+    border-bottom: 1px solid #bbbbbb;
+    font-size: 15px;
+    border-top-left-radius:6px;
+    border-top-right-radius:6px;
+    color: #1c1c1c;
+    text-shadow: 0 0 5px white;
+    /* background-color:rgba(230,230,230,0.93); */
+    background: url(../image/titbg.gif);
+    background-size: 10px;
+}
 /*end:叶夷*/
