--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
@@ -56,3 +56,13 @@ html, body {
 .userTags{
 	float:left
 }
+
+.noMatchUser{
+	margin:35px auto;
+	padding-bottom:4px;
+	width: 100%;
+	text-align:center;
+	font-size:12px;
+	height: 60px;
+	float: left;
+}
