--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page_web.css
@@ -286,6 +286,30 @@ height:0px;
     position:relative;/*设为relative,下级的absolute才能生效*/
 }
 
+.cloneMyTag{
+	float: left;
+    text-align: center;
+    border-radius: 25px;
+    padding:1px;
+    padding-left: 8px;
+    padding-right: 8px;
+    margin-top:1.2%;//这里必须是百分数,计划我的标签框高度时要用到.
+    //margin-bottom:5px;
+    margin-right:6px;
+    font-size:.8em;
+    letter-spacing:1px;
+    //border:1px solid;
+    //width:37px;
+    height:20px;
+    line-height:20px;
+    cursor:pointer;
+    color:white;
+    //background-color:rgba(66,66,66,0.9);
+    //text-shadow:1px 1px 0.3em black; 
+    //box-shadow:1px 1px 1px black;
+    //position:relative;/*设为relative,下级的absolute才能生效*/
+}
+
 #addtag{
 	color:#cccccc;
 	border:1px solid #a5a5a5;
@@ -296,6 +320,9 @@ height:0px;
 	//line-height:25px;
 	background:url('../image/plus3.jpg') center center no-repeat;
 	background-size:100% 100%;
+	position:fixed;
+	opacity:0.5;
+	z-index:100;
 }
 
 #samplemytag {display:none}
