--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
@@ -5,19 +5,29 @@ body{position:relative;
 
 #header {
     width: 100%;
-    height: 43px;
+    height: 11%;
     background-size: 8px;
     //border-bottom: 1px solid #5d5d5d;
     //margin-bottom: 20px;
     z-index: 12;
     background-color: rgb(250, 250, 250);
+    overflow-x:hidden;
 }
 
-#goback{position:relative;height:43px;width:60px;font-size:22px;float:left;cursor:pointer;z-index:14}
-#goback img{height: 16px;
+#goback{/* height:43px;width:60px;font-size:22px;float:left;cursor:pointer;z-index:14 */
+	float: left;
+    padding:1px;
+    padding-left: 8px;
+    padding-right: 8px;
+    margin-top:1.2%;
+    margin-right:6px;
+    width:37px;
+    cursor:pointer;
+}
+#goback img{//height: 16px;
     width: 20px;
-    margin-top: 12px;
-    margin-left: 21px;}
+    //margin-top: 12px;
+    //margin-left: 21px;}
 
 ._closeBtn{
 	float:right;
