--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
@@ -66,3 +66,27 @@ html, body {
 	height: 60px;
 	float: left;
 }
+
+.mytag{
+	float: left;
+    text-align: center;
+    border-radius: 25px;
+    padding:1px;
+    padding-left: 8px;
+    padding-right: 8px;
+    margin-top:1.2%;//这里必须是百分数,计划我的标签框高度时要用到.
+    //margin-bottom:5px;
+    margin-right:6px;
+    font-size:.8em;
+    letter-spacing:1px;
+    border:1px solid gray;
+    //width:37px;
+    height:20px;
+    line-height:20px;
+    cursor:pointer;
+    color:white;
+    background-color:rgba(66,66,66,0.9);
+    text-shadow:1px 1px 0.3em black; 
+    box-shadow:1px 1px 1px black;
+    position:relative;/*设为relative,下级的absolute才能生效*/
+}
