将手机匹配人页面点击失败问题解决，因为手机上获取的颜色值是#xxx格式，而电脑上获取的颜色值是rgb格式，两者不匹配导致问题的发生

--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
@@ -85,7 +85,7 @@ html, body {
     line-height:20px;
     cursor:pointer;
     color:white;
-    background-color:rgba(66,66,66,0.9);
+    background-color:#515151;
     text-shadow:1px 1px 0.3em black; 
     box-shadow:1px 1px 1px black;
     position:relative;/*设为relative,下级的absolute才能生效*/
