匹配人详情页的位置调整更改

--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
@@ -15,7 +15,8 @@ body{position:relative;
 }
 
 #goback{/* height:43px;width:60px;font-size:22px;float:left;cursor:pointer;z-index:14 */
-	float: left;
+	/* float: left; */
+	position:fixed;
     padding:1px;
     padding-left: 8px;
     padding-right: 8px;
