--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
@@ -1,29 +1,37 @@
 
 body{position:relative;
-	background:url('../image/dialoglist-background1.jpg') 100% 100% no-repeat;
-	background-size:100% 100%;}
+	/* background:url('../image/dialoglist-background1.jpg') 100% 100% no-repeat;
+	background-size:100% 100%; */}
 
 #header {
     width: 100%;
     height: 11%;
     background-size: 8px;
     //border-bottom: 1px solid #5d5d5d;
-    //margin-bottom: 20px;
+    padding-bottom: 3%;
     z-index: 12;
-    background-color: rgb(250, 250, 250);
+    //background-color: rgb(250, 250, 250);
     overflow-x:hidden;
+    padding-top: 5%;
 }
 
 #goback{/* height:43px;width:60px;font-size:22px;float:left;cursor:pointer;z-index:14 */
 	/* float: left; */
-	position:fixed;
+	/* position:fixed;
     padding:1px;
     padding-left: 8px;
     padding-right: 8px;
     margin-top:1.2%;
     margin-right:6px;
     width:37px;
-    cursor:pointer;
+    cursor:pointer; */
+    
+    position:fixed;
+	padding-left: 2%;
+	width:37px;
+	cursor:pointer;
+	height:41px;
+	line-height:41px;
 }
 #goback img{//height: 16px;
     width: 20px;
@@ -57,12 +65,15 @@ body{position:relative;
 	margin-right:10px;
 	width: 15%;
 	text-align:center;
-	background-color:#708090;
+	background-color: #fff;
 	border-radius: 10px;
 	float:right;
-	height:25px;
-	line-height:25px;
+	height:20px;
+	line-height:20px;
 	cursor:pointer;
+	color: #cfcecd;
+	border: 1px solid #afacac;
+	font-size:12px;
 }
 
 /**start:叶夷  2017.11.28 tab来回切换需要的css样式*/
@@ -76,23 +87,25 @@ ul,li{
 }
     
 .tabClick{ 
-	background: #f3f3f3; 
+	/* background: #f3f3f3;  */
+	background:#fff;
 	overflow: hidden;
 	width:100%;
-	margin-bottom:20px;
+	//margin-bottom:20px;
+	border-bottom:1px solid #f7f7f7;
 }
    
 .tabClick li{ 
 	height:40px; 
-	line-height: 40px; 
-	width: 50%; 
+	line-height: 50px; 
+	//width: 45%; 
 	float: left; 
-	text-align: center;
+	//text-align: center;
 	cursor:pointer;
 }
     
 .tabClick li.active{ 
-	color: #099; 
+	color: #f6b881; 
 	transition: 0.1s; 
 	font-weight: bold
 }
@@ -118,4 +131,17 @@ ul{
     -webkit-margin-after: 0em;
     -webkit-padding-start: 0px;
 }
+
+.lineBorder{ 
+	//height: 2px; 
+	overflow: hidden; 
+	//border-bottom:1px solid #099; 
+	background: #f7f7f7;
+	}
+	
+.lineDiv{ 
+	background: #f6b881; 
+	height: 1px; 
+	width: 10%;
+	}
 /**end:叶夷  2017.11.28*/
