--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
@@ -10,9 +10,10 @@ html, body {
 
 .showMatchUsers{
 	width:100%; 
-	height:91%;
+	height:84%;
 	//overflow-y:scroll;
 	overflow-x:hidden;
+	background-color:#f3f3f3;
 }
 
 .userimg{
@@ -26,6 +27,20 @@ html, body {
 	width: 28px;
 	border-radius: 50%;
 	float: left;
+}
+
+.matchUser_content{
+	float: left;
+	border-bottom: 1px solid #b7d0e7;
+	padding-bottom:2%;
+}
+
+.matchUser_content_top{
+	float: left;
+    width: 100%;
+    height: 50%;
+    //line-height: 25px;
+    margin-top:6px;
 }
 
 .userTag{
@@ -42,7 +57,7 @@ html, body {
 }
 .username{
 	float: left;
-    padding:10px 5px 1px 5px;
+    //padding:10px 5px 1px 5px;
     font-size:14px;
 }
 
@@ -51,6 +66,7 @@ html, body {
 	//padding-top:10px;
 	float:left;
 	width:100%;
+	margin-top:6%;
 }
 
 .userTags{
@@ -81,8 +97,8 @@ html, body {
     letter-spacing:1px;
     border:1px solid gray;
     //width:37px;
-    height:20px;
-    line-height:20px;
+    //height:20px;
+    //line-height:20px;
     cursor:pointer;
     color:white;
     background-color:#515151;
