--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
@@ -13,13 +13,15 @@ html, body {
 	height:84%;
 	//overflow-y:scroll;
 	overflow-x:hidden;
-	background-color:#f3f3f3;
+	background-color:#fcfcfc;
+	border-top: 1px solid #e4e4e4;
 }
 
 .userimg{
 	padding:5px;
 	float: left;
-	width:100%
+	width:100%;
+	border-radius:20%;
 }
 
 .userimg>img {
@@ -31,7 +33,7 @@ html, body {
 
 .matchUser_content{
 	float: left;
-	border-bottom: 1px solid #b7d0e7;
+	border-bottom: 1px solid #e7e7e7;
 	padding-bottom:2%;
 }
 
@@ -59,6 +61,7 @@ html, body {
 	float: left;
     //padding:10px 5px 1px 5px;
     font-size:14px;
+    margin-left:5px;
 }
 
 .matchUser{
@@ -84,25 +87,27 @@ html, body {
 }
 
 .mytag{
-	float: left;
+    float: left;
     text-align: center;
     border-radius: 25px;
-    padding:1px;
+    padding: 2px;
     padding-left: 8px;
     padding-right: 8px;
-    margin-top:1.2%;//这里必须是百分数,计划我的标签框高度时要用到.
-    //margin-bottom:5px;
-    margin-right:6px;
-    font-size:.8em;
-    letter-spacing:1px;
-    border:1px solid gray;
-    //width:37px;
-    //height:20px;
-    //line-height:20px;
-    cursor:pointer;
-    color:white;
-    background-color:#515151;
-    text-shadow:1px 1px 0.3em black; 
-    box-shadow:1px 1px 1px black;
-    position:relative;/*设为relative,下级的absolute才能生效*/
+    padding-bottom: 3px;
+    margin-top: 1.2%;/*这里必须是百分数,计划我的标签框高度时要用到.*/
+    margin-right: 6px;
+    font-size: 13px;
+    letter-spacing: 1px;
+    border: 1px solid #969494;
+    cursor: pointer;
+    color: #3a3a3a;
+    background-color: #f5f5f5;
+    /* text-shadow: 1px 1px 0.3em black; */
+    /* box-shadow: 1px 1px 1px black; */
+    position: relative;/*设为relative,下级的absolute才能生效*/
+}
+    
+    
+    
+    
 }
