--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
@@ -27,11 +27,11 @@ body{position:relative;
     cursor:pointer; */
     
     position:fixed;
-	padding-left: 2%;
+	padding-left: 3%;
 	width:37px;
 	cursor:pointer;
 	height:41px;
-	line-height:41px;
+	line-height:55px;
 }
 #goback img{//height: 16px;
     width: 20px;
@@ -63,7 +63,8 @@ body{position:relative;
 
 .sendMsg{
     margin-right: 10px;
-    width: 12%;
+    /* width: 12%; 这是在手机上不够用*/
+    width:52px;
     text-align: center;
     background-color: #fff;
     border-radius: 10px;
@@ -93,6 +94,7 @@ ul,li{
 	width:100%;
 	//margin-bottom:20px;
 	border-bottom:1px solid #f7f7f7;
+	color:rgb(191, 188, 188);
 }
    
 .tabClick li{ 
