1.首页选择的标签和匹配详情页选择的标签时刻保持同步  2.匹配详情页共同选择的标签和共同反感的标签做区分

--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page_web.css
@@ -75,6 +75,7 @@ html, body {
 .userTags{
 	float:left;
 	padding-left:5px;
+	width:100%;
 }
 
 .noMatchUser{
@@ -108,7 +109,6 @@ html, body {
     position: relative;/*设为relative,下级的absolute才能生效*/
 }
     
-    
-    
-    
+.negative{
+	opacity:0.6;
 }
