--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
@@ -179,7 +179,7 @@ border-bottom:1px solid #d8d8d8;}*/
     color: #1c1c1c;
     text-shadow: 0 0 5px white;
     /* background-color:rgba(230,230,230,0.93); */
-    background: url(../image/titbg.gif);
+    background: url(https://www.xunta.so/xunta-web/client_code/image/titbg.gif);
     background-size: 10px;
 }
 /*end:叶夷*/
