--- a/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
+++ b/xunta-web/src/main/webapp/client_code/main_page/topics_page.css
@@ -122,7 +122,7 @@
 
 #topspace{
 	height: 40px;
-	background: url('../image/titbg.gif') center top repeat-x;
+	background: url('https://www.xunta.so/xunta-web/client_code/image/titbg.gif') center top repeat-x;
 	background-size:8px;
 }
 
