--- a/xunta-web/src/main/webapp/client_code/login/login.css
+++ b/xunta-web/src/main/webapp/client_code/login/login.css
@@ -18,7 +18,7 @@ display:none;
 box-shadow:0px 2px 4px rgba(34, 25, 25, 0.2);
 }
 
-#cancel_mobilelogin{position:absolute;left:0; top:0px; right:0; text-align:center;background:url('../image/titbg.gif') center top repeat-x;}
+#cancel_mobilelogin{position:absolute;left:0; top:0px; right:0; text-align:center;background:url('https://www.xunta.so/xunta-web/client_code/image/titbg.gif') center top repeat-x;}
 
 input,button{
 color:#666666;//display:none
