--- a/xunta-web/src/main/webapp/client_code/index_page/index.css
+++ b/xunta-web/src/main/webapp/client_code/index_page/index.css
@@ -24,7 +24,7 @@ html, body {
 
 #welcomepicture_container{
 	position:absolute;
-	top: 15%;
+	top: 13%;
 	left: 15%;
 	width: 70%;
 	height: 45%;
@@ -32,7 +32,7 @@ html, body {
 }
 
 #welcome2{
-width:100%;height:40%;
+width:100%;//height:40%;
 }
 
 .iframe_windows {
