--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
@@ -52,7 +52,7 @@ body{position:relative;
 	text-align: left;
 	color: #686868;
 	height: 40px;
-	line-height: 48px;
+	//line-height: 48px;
 	font-size: 15px;
 }
 
@@ -156,13 +156,43 @@ ul{
 	font-size: 0.9em;
 	height: 35px;
 	margin-top: 5px;
-	line-height: 36px;
+	//line-height: 36px;
 	width: 38%;
 }
 
-.groupChat img{
+.groupChatAdd{
 	height: 17px;
 	width: 17px;
 	margin-top: 9px;
 	margin-left: 6px;
+}
+
+.groupChatAdd2{
+	height: 22px;
+	width: 22px;
+	margin-top: 8px;
+	margin-right: 10px;
+	float: right;
+	z-index:100;
+}
+
+.inputGroupChat{
+	height: 28px;
+	border: none;
+	background-color: #f6f6f6;
+	color: #9ca5b6;
+	float:right;
+	width: 61%;
+	margin-top:3px;
+	outline:none;
+}
+.inputGroupChat2{
+	outline:none;
+	height: 28px;
+	border: none;
+	background-color: #f6f6f6;
+	color: #9ca5b6;
+	width: 106px;
+	margin-top:3px;
+	margin-left: 10px;
 }
