--- a/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
+++ b/xunta-web/src/main/webapp/client_code/matchUsers_page/matchUsers_page.css
@@ -67,8 +67,8 @@ body{position:relative;
     height: 20px;
     line-height: 20px;
     cursor: pointer;
-    color: ##494949;
-    border: 1px solid #afacac;
+    color: #494949;
+    border: 1px solid rgba(175, 172, 172, 0.28);
     font-size: 12px;
 }
 
@@ -154,23 +154,26 @@ ul{
 	float: right;
 	background-color: #f6f6f6;
 	font-size: 0.9em;
-	height: 35px;
-	margin-top: 5px;
+	height: 30px;
+	margin-top: 7px;
 	//line-height: 36px;
 	width: 38%;
+	border-radius:5px;
+	box-shadow:rgba(102, 102, 102, 0.57) 2px 1px 1px;
+	margin-right:10px;
 }
 
 .groupChatAdd{
 	height: 17px;
 	width: 17px;
-	margin-top: 9px;
+	margin-top: 8px;
 	margin-left: 6px;
 }
 
 .groupChatAdd2{
 	height: 22px;
 	width: 22px;
-	margin-top: 8px;
+	margin-top: 3px;
 	margin-right: 10px;
 	float: right;
 	z-index:100;
@@ -179,20 +182,62 @@ ul{
 .inputGroupChat{
 	height: 28px;
 	border: none;
-	background-color: #f6f6f6;
+	background-color: transparent;
 	color: #9ca5b6;
 	float:right;
 	width: 61%;
-	margin-top:3px;
+	//margin-top:3px;
 	outline:none;
+	font-size:16px;
 }
 .inputGroupChat2{
 	outline:none;
 	height: 28px;
 	border: none;
-	background-color: #f6f6f6;
+	background-color: transparent;
 	color: #9ca5b6;
 	width: 106px;
-	margin-top:3px;
+	//margin-top:3px;
 	margin-left: 10px;
+	font-size:16px;
 }
+
+/**2018.03.12 叶夷  点击群聊之后显示的复选框的样式*/
+/* .guideChatCheckBox{
+	width: 20px;
+    height: 20px;
+    border: 2px solid #dedede;
+    //background: white;
+    background:#fff url(../image/checkbox.jpg);
+    float: right;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+input[type="checkbox"]:checked {
+  background-position: -48px 0;
+} */
+.guideChatCheckBox {
+	//position: absolute;
+	visibility: hidden;
+}
+.guideChatCheckBox+label {
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+	border: 2px solid #dedede;
+	background: white;
+	float:right;
+} 
+.guideChatCheckBox:checked+label:after {
+	content: "";
+	float:right;
+	top: 1px;
+	width: 11px;
+	height: 5px; 
+	border: 2px solid #dedede;
+	border-top-color: transparent;
+	border-right-color: transparent;
+	 -ms-transform: rotate(-60deg);
+	  -moz-transform: rotate(-60deg);
+	   -webkit-transform: rotate(-60deg);
+	    transform: rotate(-45deg);}
