--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
@@ -229,10 +229,10 @@ border-bottom:1px solid #d8d8d8;}*/
 .cover{
 	width: 100%; 
 	height: 100%; 
-	background: rgb(0, 0, 0); 
+	//background: rgb(0, 0, 0); 
 	position: fixed; 
 	z-index: 103; 
-	opacity: 0.7;
+	//opacity: 0.7;
 	top:0px;
 	left:0px;
 	z-index:11;
