--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.css
@@ -189,17 +189,17 @@ border-bottom:1px solid #d8d8d8;}*/
     text-align: center;
     height: 170%;
     background-color: white;
-    margin-top: 2%;
+    //margin-top: 2%;
 }
 
 .twoBarCodeImg{
-	 margin-bottom: 2%;
-    margin-top: 2%;
-    height: 70%;
-    width: 90%;
-    margin-left: 5%;
-    border-bottom: 1px solid #eae6e6;
-    padding-bottom: 10px;
+	 /* margin-bottom: 2%; */
+	 margin-top: 2%;
+	 height: 90%;
+	 width: 90%;
+	 margin-left: 5%;
+	 /* border-bottom: 1px solid #eae6e6; */
+	 /* padding-bottom: 10px; */
 }
 
 .twoBarCodeImg img{
